traversal.snake.Snake.scala.error
Compilation error:
Snake:8: error: 'while' expected but 'else' found.
    } else droite(); avance(); droite()
      ^Snake:8: error: '(' expected but ';' found.
    } else droite(); avance(); droite()
                   ^Snake:9: error: ';' expected but 'while' found.
  } while(!estSurPositionFinale)
    ^Snake:12: error: expected class or object definition
def estSurPositionFinale():Boolean = {
^Snake:24: error: Unmatched closing brace '}' ignored here
}
^