traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  do {
    while(!estFaceMur){
      avance()
    }
    
    } else droite(); avance(); droite()
  } while(!estSurPositionFinale)
}

def estSurPositionFinale():Boolean = {
  if(getDirection()==Direction.EST) {
    gauche()
    if(estFaceMur) return true
  }
  if(getDirection()==Direction.OUEST) {
    droite()
    if(estFaceMur) return true
  }
  return false
}